unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Assignment_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group_Name__c</fullName>
    <formula>Assignment_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Group Name</label>
    <type>Text</type>
</CustomField>