unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Is_Paused__c.field-meta.xml
<CustomField>
    <fullName>Is_Paused__c</fullName>
    <formula>IF(
    (
        (ISBLANK(Pause_Start_At__c) &amp;&amp; ISBLANK(Pause_Start_At__c)) ||
        Pause_End_At__c &lt; NOW() ||
        Pause_Start_At__c &gt; NOW()
    ),
    FALSE,
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paused</label>
    <type>Checkbox</type>
</CustomField>