unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Min_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Min_Number_of_Employees__c</fullName>
    <defaultValue>If(true , 0, 0)</defaultValue>
    <label>Min Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>