unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Pause_End_At__c.field-meta.xml
<CustomField>
    <fullName>Pause_End_At__c</fullName>
    <label>Pause End At</label>
    <type>DateTime</type>
</CustomField>