unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Pause_Start_At__c.field-meta.xml
<CustomField>
    <fullName>Pause_Start_At__c</fullName>
    <label>Pause Start At</label>
    <type>DateTime</type>
</CustomField>