unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Start_At__c.field-meta.xml
<CustomField>
    <fullName>Start_At__c</fullName>
    <label>Start At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>