unpackaged/main/default/objects/Assignment_Group_Member__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  Is_Active__c = TRUE,
  IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Active Status&quot;),
  IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Inactive Status&quot;)
)</formula>
    <inlineHelpText>Based on the Is Active checkbox</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>