unpackaged/main/default/objects/Assignment_Group_Member__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>R165384</description>
    <formula>User__r.FirstName &amp; &quot; &quot; &amp; User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>