unpackaged/main/default/objects/Assignment_Group_Member__c/fields/User_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Name__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <label>User Role Name</label>
    <type>Text</type>
</CustomField>