unpackaged/main/default/objects/Assignment_Group_Member__c/fields/User_Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Slack_ID__c</fullName>
    <formula>User__r.Slack_ID__c</formula>
    <label>User Slack ID</label>
    <type>Text</type>
</CustomField>