unpackaged/main/default/objects/Assignment_Group_Member__c/validationRules/Validate_Units_Managed.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Units_Managed</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Min_Number_of_Employees__c )</errorConditionFormula>
    <errorMessage>Minimum Units Managed value is incorrect. Please enter 0 if units managed is not applicable.</errorMessage>
</ValidationRule>