unpackaged/main/default/objects/Assignment_Group_Member__c/listViews/MQL_MyCase_AE_Core_B.listView-meta.xml
<ListView>
    <fullName>MQL_MyCase_AE_Core_B</fullName>
    <columns>Assignment_Group__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Min_Number_of_Employees__c</columns>
    <columns>Last_Assignment__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assignment_Group__c</field>
        <operation>equals</operation>
        <value>MQL - MyCase AE</value>
    </filters>
    <filters>
        <field>Min_Number_of_Employees__c</field>
        <operation>lessOrEqual</operation>
        <value>5</value>
    </filters>
    <filters>
        <field>User_Role_Name__c</field>
        <operation>contains</operation>
        <value>(B)</value>
    </filters>
    <label>MQL - MyCase AE - Core (B)</label>
</ListView>