unpackaged/main/default/objects/Assignment_Group_Member__c/listViews/MQL_Payments_BDR.listView-meta.xml
<ListView>
    <fullName>MQL_Payments_BDR</fullName>
    <columns>Assignment_Group__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Min_Number_of_Employees__c</columns>
    <columns>Last_Assignment__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assignment_Group__c</field>
        <operation>equals</operation>
        <value>MQL - Payments BDR</value>
    </filters>
    <label>MQL - Payments BDR</label>
</ListView>